--- a/source/_posts/读《大话设计模式》之状态模式.md
+++ b/source/_posts/读《大话设计模式》之状态模式.md
@@ -1,5 +1,8 @@
-﻿---
 title: 读《大话设计模式》之状态模式
+date: 2016/10/10 20:46:25
+updated: 2016/10/10 20:46:25
+categories:
+- 设计模式
 ---
 # 一、模式概述：
 ## 在很多情况下，一个对象的行为取决于它的一个或多个变化的属性，这些属性我们称之为状态，这个对象称之为状态对象。
@@ -25,4 +28,5 @@ title: 读《大话设计模式》之状态模式
 1、对象的行为依赖于它的状态并且可以根据它的状态改变而改变它的相关行为。 
 2、代码中包含大量与对象状态有关的条件语句
 # 四、模式总结：
+
 我的理解就是状态模式利用实例类和状态类之间的关系来代替过多 的if else状态转换逻辑，实现拓展性、可维护性。
