--- a/source/_posts/读《大话设计模式》之适配器模式.md
+++ b/source/_posts/读《大话设计模式》之适配器模式.md
@@ -1,5 +1,8 @@
----
 title: 读《大话设计模式》之适配器模式
+date: 2016/10/11 20:46:25
+updated: 2016/10/11 20:46:25
+categories:
+- 设计模式
 ---
 # 一、模式概述：
 ## 将一个类的接口转换成客户希望的另外一个接口。
@@ -22,4 +25,5 @@ Client：客户端。
 2.希望复用一些类，但接口又与复用环境要求不一致的情景。
 3.双方都不太容易修改接口的情景。
 # 四、模式总结：
+
 接口统一实则应该在设计阶段就完成。接口不统一，首先应该考虑重构统一接口，在双方都不太容易修改的时候再使用适配器模式适配。事后控制不如事中控制，事中控制不如事前控制。（扁鹊三兄弟的故事）
