[update]delete unused md and update pic link

--- a/source/_posts/读《大话设计模式》之工厂方法模式.md
+++ b/source/_posts/读《大话设计模式》之工厂方法模式.md
@@ -3,8 +3,10 @@ date: 2017/2/11 20:46:25
 updated: 2017/9/12 20:46:25
 categories:
 - 设计模式
+- 《大话设计模式》
 tags:
 - 设计模式
+- 《大话设计模式》
 ---
 # 一、模式概述：
 
@@ -12,10 +14,10 @@ __定义一个用于创建对象的接口，让子类决定实例化哪一个类
 
 ## UML图：
 
-![工厂方法模式结构图](http://upload-images.jianshu.io/upload_images/3828003-a1e6294fa9818873.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![工厂方法模式结构图](/assert/img/designmodel/justtalk/factorymethod/factorymethod-1.png)
 
 
-![工厂方法模式实现](http://upload-images.jianshu.io/upload_images/3828003-41b22be6da71a1ae.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![工厂方法模式实现](/assert/img/designmodel/justtalk/factorymethod/factorymethod-2.png)
 
 * 抽象工厂角色： 这是工厂方法模式的核心，它与应用程序无关。是具体工厂角色必须实现的接口或者必须继承的父类。在java中它由抽象类或者接口来实现。
 
@@ -42,5 +44,5 @@ __这样整个工厂和具体的产品都没有修改的变化，只有扩展的
 
 # 四、模式总结：
 对简单工厂模式的进一步抽象和封装。在简单工厂的基础上多抽象了一个工厂父类，用来生成不同的工厂类。工厂方法把简单工厂的内部逻辑判断迁移到了客户端来进行。
-__使用工厂方法模式足以应付我们可能遇到的大部分业务需求。但是当产品种类非常多时，就会出现大量的与之对应的工厂类，这不应该是我们所希望的。所以我建议在这种情况下使用[简单工厂模式](http://www.jianshu.com/p/5425076feb78)与工厂方法模式相结合的方式来减少工厂类：即对于产品树上类似的种类（一般是树的叶子中互为兄弟的）使用[简单工厂模式](http://www.jianshu.com/p/5425076feb78)来实现。
-当然特殊的情况，就要特殊对待了：对于系统中存在不同的产品树，而且产品树上存在产品族（下一节将解释这个名词）。那么这种情况下就可能可以使用[抽象工厂模式](http://www.jianshu.com/p/78200d05dbde)了。__
+__使用工厂方法模式足以应付我们可能遇到的大部分业务需求。但是当产品种类非常多时，就会出现大量的与之对应的工厂类，这不应该是我们所希望的。所以我建议在这种情况下使用[简单工厂模式](/2016/01/22/读《大话设计模式》之简单工厂模式/index.html#一、模式概述：)与工厂方法模式相结合的方式来减少工厂类：即对于产品树上类似的种类（一般是树的叶子中互为兄弟的）使用[简单工厂模式](/2016/01/22/读《大话设计模式》之简单工厂模式/index.html#一、模式概述：)来实现。
+当然特殊的情况，就要特殊对待了：对于系统中存在不同的产品树，而且产品树上存在产品族（下一节将解释这个名词）。那么这种情况下就可能可以使用[抽象工厂模式](/2016/03/10/读《大话设计模式》之抽象工厂模式/index.html#一、模式概述：)了。__
