--- a/source/_posts/读《大话设计模式》之状态模式.md
+++ b/source/_posts/读《大话设计模式》之状态模式.md
@@ -3,8 +3,10 @@ date: 2016/10/10 20:46:25
 updated: 2016/10/10 20:46:25
 categories:
 - 设计模式
+- 《大话设计模式》
 tags:
 - 设计模式
+- 《大话设计模式》
 ---
 # 一、模式概述：
 
@@ -16,7 +18,7 @@ tags:
 没图说个文明你我他。
 
 ## UML图：
-![状态模式结构图](http://upload-images.jianshu.io/upload_images/3828003-9cf5d488504e2293.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![状态模式结构图](/assert/img/designmodel/justtalk/state/state-1.png)
 1.State类：抽象状态类，定义一个接口封装与Context状态相关的行为(所以依赖Context类)。
 2.ConcreteState类：具体状态类，实现一个具体的状态的行为。
 3.Context类：具体的实例，他定义当前的状态，持有State状态类(所以是聚合关系)。
