--- a/source/_posts/读《大话设计模式》之简单工厂模式.md
+++ b/source/_posts/读《大话设计模式》之简单工厂模式.md
@@ -3,8 +3,10 @@ date: 2016/1/22 20:46:25
 updated: 2017/8/22 20:46:25
 categories:
 - 设计模式
+- 《大话设计模式》
 tags:
 - 设计模式
+- 《大话设计模式》
 ---
 # 一、模式概述：
 
@@ -14,7 +16,7 @@ __简单工厂模式是由一个工厂对象决定创建出哪一种产品类的
 
 ## UML图：
 
-![简单工厂模式UML图](http://upload-images.jianshu.io/upload_images/3828003-2250cd1dfdb0d2a9.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![简单工厂模式UML图](/assert/img/designmodel/justtalk/simplefactory/simplefactory-1.png)
 
 * 工厂（Creator）角色：简单工厂模式的核心，它负责实现创建所有实例的内部逻辑。工厂类的创建产品类的方法可以被外界直接调用，创建所需的产品对象。
 * 抽象产品（Product）角色：简单工厂模式所创建的所有对象的父类，它负责描述所有实例所共有的公共接口。
@@ -34,4 +36,4 @@ __简单工厂模式是由一个工厂对象决定创建出哪一种产品类的
 
 # 四、模式总结：
 简单工厂模式使客户端与具体的产品对象解耦。工厂类中包含了必要的逻辑判断，根据客户端的选择条件动态实例化相关的类。但是这就造成了工厂类违背了开闭原则，工厂类有修改的变化。
-__它的缺点在[工厂方法模式](http://www.jianshu.com/p/6377f8b2567d)得到一定的克服。__
+__它的缺点在[工厂方法模式](/2017/02/11/读《大话设计模式》之工厂方法模式/index.html#一、模式概述：)得到一定的克服。__
