--- a/source/_posts/读《大话设计模式》之观察者模式.md
+++ b/source/_posts/读《大话设计模式》之观察者模式.md
@@ -3,8 +3,10 @@ date: 2016/11/22 20:46:25
 updated: 2017/10/22 20:46:25
 categories:
 - 设计模式
+- 《大话设计模式》
 tags:
 - 设计模式
+- 《大话设计模式》
 ---
 # 一、模式概述：
 
@@ -12,9 +14,9 @@ __定义了一种一对多的依赖关系，让多个观察者对象同时监听
 
 ## UML图：
 
-![观察者模式结构图](http://upload-images.jianshu.io/upload_images/3828003-7c9d4dd8fdbcb91d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![观察者模式结构图](/assert/img/designmodel/justtalk/observer/observer-1.png)
 
-![观察者模式](http://upload-images.jianshu.io/upload_images/3828003-53ff04e31b151146.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![观察者模式](/assert/img/designmodel/justtalk/observer/observer-2.png)
 
 # 二、模式优缺点：
 
