--- a/source/_posts/读《大话设计模式》之备忘录模式.md
+++ b/source/_posts/读《大话设计模式》之备忘录模式.md
@@ -3,8 +3,10 @@ date: 2016/10/12 20:46:25
 updated: 2016/10/12 20:46:25
 categories:
 - 设计模式
+- 《大话设计模式》
 tags:
 - 设计模式
+- 《大话设计模式》
 ---
 # 一、模式概述：
 
@@ -12,7 +14,7 @@ tags:
 
 ## UML图：
 
-![备忘录模式](http://upload-images.jianshu.io/upload_images/3828003-7d5271e1c96c84c3.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![备忘录模式](/assert/img/designmodel/justtalk/memento/memento-1.png)
 Originator（发起人）：负责创建一个备忘录Memento，用以记录当前时刻它的内部状态，并可以使用备忘录恢复内部状态。Originator可根据需要决定Memento存储Originator的哪些内部状态。
 Memento（备忘录）：负责存储Originator对象的内部状态，并可防止Originator以外的其他对象访问备忘录。备忘录有两个接口，Caretaker只能看到备忘录的窄接口，它只能将备忘录传递给其他对象。Originator能够看到一个宽接口，允许它访问返回到先前状态所需的所有数据。
 Caretaker（管理者）：负责保存好备忘录，不能对备忘录的内容进行操作或检查。
