--- a/source/_posts/读《大话设计模式》之抽象工厂模式.md
+++ b/source/_posts/读《大话设计模式》之抽象工厂模式.md
@@ -3,8 +3,10 @@ date: 2016/3/10 20:46:25
 updated: 2017/5/12 20:46:25
 categories:
 - 设计模式
+- 《大话设计模式》
 tags:
 - 设计模式
+- 《大话设计模式》
 ---
 # 一、模式概述：
 
@@ -14,7 +16,7 @@ __提供一个创建一系列相关或互相依赖的接口，而无需指定它
 
 ## UML图：
 
-![抽象工厂模式](http://upload-images.jianshu.io/upload_images/3828003-14b8ca4e87da6dc9.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![抽象工厂模式](/assert/img/designmodel/justtalk/abstractfactory/abstractfactory-1.png)
 
 * 抽象工厂角色： 这是工厂方法模式的核心，它与应用程序无关。是具体工厂角色必须实现的接口或者必须继承的父类。在java中它由抽象类或者接口来实现。
 
