--- a/source/_posts/读《大话设计模式》之适配器模式.md
+++ b/source/_posts/读《大话设计模式》之适配器模式.md
@@ -3,8 +3,10 @@ date: 2016/10/11 20:46:25
 updated: 2016/10/11 20:46:25
 categories:
 - 设计模式
+- 《大话设计模式》
 tags:
 - 设计模式
+- 《大话设计模式》
 ---
 # 一、模式概述：
 
@@ -13,7 +15,7 @@ tags:
 
 ## UML图：
 
-![适配器模式结构图](http://upload-images.jianshu.io/upload_images/3828003-93bbb19697c1ba95.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![适配器模式结构图](/assert/img/designmodel/justtalk/adapter/adapter-1.png)
 Target：客户所期待的接口。（目标可以是具体的或抽象的类，也可以是接口）
 Adaptee：需要适配的类。
 Adapter：适配器类。（通过在内部包装一个Adaptee对象，把源接口转换成目标接口）
