[update]add post QRCode life

--- a/source/_posts/浅谈二维码①身世谜题.md
+++ b/source/_posts/浅谈二维码①身世谜题.md
@@ -6,6 +6,7 @@ categories:
 - 二维码 
 tags:
 - 二维码
+- 浅谈二维码
 ---
 
 # 一、引言
@@ -104,6 +105,8 @@ QR码使用纵向和横向两个方向处理数据，如果是相同的信息量
 
 # 四、结语
 
+**以上是二维码的简单介绍，你也可以去[二维码官网](https://www.qrcode.com)了解更多。**
+
 <center>
 
 ![扫一扫](/assert/img/qrcode/baseinfo/wxscan.jpg)
@@ -112,3 +115,9 @@ QR码使用纵向和横向两个方向处理数据，如果是相同的信息量
 
 这个界面想必大家都很熟悉，那么你对扫二维码的这一过程感不感到好奇呢？那么**预知后事如何，请听下回分解**！（啪，拍案！）
 
+---
+**浅谈二维码系列文章**
+
+* [浅谈二维码①身世谜题](/2019/02/22/浅谈二维码①身世谜题/index.html#一、引言)
+* [浅谈二维码②与世浮沉](/2019/02/22/浅谈二维码②与世浮沉/index.html#一、引言)
+---
