[update]reduce repeat

--- a/source/_posts/浅谈二维码②与世浮沉.md
+++ b/source/_posts/浅谈二维码②与世浮沉.md
@@ -89,7 +89,7 @@ tags:
 
 之后这位外科医生给我打了全麻，我昏睡了过去，等我醒来，他已经拿到了藏在我体内的信息。
 后来他给我解释他用了一种名为“解码”的高超手术，还说如果我感兴趣，可以教我。（不，我不感兴趣！）
-（解码可以简单理解为将已加密的信息，通过对应的解密方法，还原出原本的信息，暂时不深入探讨。解码可以简单理解为将已加密的信息，通过对应的解密方法，还原出原本的信息，暂时不深入探讨。）
+（解码可以简单理解为将已加密的信息，通过对应的解密方法，还原出原本的信息，暂时不深入探讨。）
 最后，他将信息不知道到交给了谁（扫描二维码的使用者和调用方），不过这已经不是我需要关心的了，我已经完成了我的使命。
 不过后来，我听到“滴”的一声。听说那天是情人节，阿珍收到了阿强的520元转账。
 
