:memo: docs: update post

--- a/source/_posts/浅谈二维码①身世谜题.md
+++ b/source/_posts/浅谈二维码①身世谜题.md
@@ -15,9 +15,9 @@ tags:
 
 |                                                  二维码足迹                                                  |                                                     二维码足迹                                                     |
 |:-------------------------------------------------------------------------------------------------------:|:-------------------------------------------------------------------------------------------------------------:|
-| <div align=center><img width="150" height="150" src="/assert/img/qrcode/baseinfo/qrcodeShy.png"/></div> | <div align=center><img width="150" height="150" src="/assert/img/qrcode/baseinfo/qrcodeBeautiful.png"/></div> |
-|   <div align=center><img width="150" height="150" src="/assert/img/qrcode/baseinfo/mywx.jpg"/></div>    |    <div align=center><img width="300" height="200" src="/assert/img/qrcode/baseinfo/qrcodeCat.png"/></div>    |
-|                                                        <div align=center><img width="300" height="200" src="/assert/img/qrcode/baseinfo/qrcodeGif.gif"/></div>                                                         ||
+| <div align=center><img width="150" height="150" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/qrcodeShy.png"/></div> | <div align=center><img width="150" height="150" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/qrcodeBeautiful.png"/></div> |
+|   <div align=center><img width="150" height="150" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/mywx.jpg"/></div>    |    <div align=center><img width="300" height="200" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/qrcodeCat.png"/></div>    |
+|                                                        <div align=center><img width="300" height="200" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/qrcodeGif.gif"/></div>                                                         ||
 
 # 二、什么是二维码
 
@@ -30,7 +30,7 @@ tags:
  
 <center>
 
-![条形码](/assert/img/qrcode/baseinfo/barcode.jpg)
+![条形码](https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/barcode.jpg)
 
 </center>
 
@@ -52,10 +52,10 @@ tags:
 
 |                                                  二维码种类                                                   |                                                    二维码种类                                                    |
 |:--------------------------------------------------------------------------------------------------------:|:-----------------------------------------------------------------------------------------------------------:|
-|   <div align=center><img width="230" height="280" src="/assert/img/qrcode/baseinfo/qrcode.jpg"/></div>   |    <div align=center><img width="220" height="120" src="/assert/img/qrcode/baseinfo/pdf417.jpg"/></div>     |
-|    <div align=center><img width="180" height="200" src="/assert/img/qrcode/baseinfo/汉信码.jpg"/></div>     |    <div align=center><img width="220" height="240" src="/assert/img/qrcode/baseinfo/ezcode.jpg"/></div>     |
-| <div align=center><img width="200" height="250" src="/assert/img/qrcode/baseinfo/azteccode.jpg"/></div>  | <div align=center><img width="280" height="210" src="/assert/img/qrcode/baseinfo/quickmarkcode.jpg"/></div> |
-| <div align=center><img width="230" height="290" src="/assert/img/qrcode/baseinfo/datamatrix.jpg"/></div> |                                                                                                             |
+|   <div align=center><img width="230" height="280" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/qrcode.jpg"/></div>   |    <div align=center><img width="220" height="120" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/pdf417.jpg"/></div>     |
+|    <div align=center><img width="180" height="200" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/汉信码.jpg"/></div>     |    <div align=center><img width="220" height="240" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/ezcode.jpg"/></div>     |
+| <div align=center><img width="200" height="250" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/azteccode.jpg"/></div>  | <div align=center><img width="280" height="210" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/quickmarkcode.jpg"/></div> |
+| <div align=center><img width="230" height="290" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/datamatrix.jpg"/></div> |                                                                                                             |
 
 其实我们平常所说的二维码**只是二维码的一种**，即QR码（快速响应码Quick Response Code）。也就是说我们**平常所说的二维码是狭义的二维码**，广义的二维码还包括了上述除了QR码的其他种类的二维码等。
 
@@ -71,7 +71,7 @@ tags:
 
 <center>
 
-![QR码存储容量](/assert/img/qrcode/baseinfo/qrcodestore.jpg)
+![QR码存储容量](https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/qrcodestore.jpg)
 
 </center>
 
@@ -89,7 +89,7 @@ QR码使用纵向和横向两个方向处理数据，如果是相同的信息量
 
 <center>
 
-![二维码纠错能力](/assert/img/qrcode/baseinfo/qrcodeerrorlevel.jpg)
+![二维码纠错能力](https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/qrcodeerrorlevel.jpg)
 
 </center>
 
@@ -99,7 +99,7 @@ QR码使用纵向和横向两个方向处理数据，如果是相同的信息量
 
 <center>
 
-![myGod](/assert/img/qrcode/baseinfo/myGod.gif)
+![myGod](https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/myGod.gif)
 
 </center>
 
@@ -109,7 +109,7 @@ QR码使用纵向和横向两个方向处理数据，如果是相同的信息量
 
 <center>
 
-![扫一扫](/assert/img/qrcode/baseinfo/wxscan.jpg)
+![扫一扫](https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/baseinfo/wxscan.jpg)
 
 </center>
 
