--- a/source/_posts/浅谈二维码②与世浮沉.md
+++ b/source/_posts/浅谈二维码②与世浮沉.md
@@ -16,7 +16,7 @@ tags:
 
 <center>
 
-![扫一扫](/assert/img/qrcode/life/wxscan.jpg)
+![扫一扫](https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/wxscan.jpg)
 
 </center>
 
@@ -29,7 +29,7 @@ tags:
 我随意画了一张简陋的流程图，你们也随意看一下吧~
 （普通的迪斯科要普通地摇，随意的流程图要随意地看）
 
-<div align=center><img width="400" height="800" src="/assert/img/qrcode/life/qrcodeProcess.jpg"/></div> 
+<div align=center><img width="400" height="800" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeProcess.jpg"/></div>
 
 **好了，你应该看懂了吧，那本文到此为止，散了吧！（哎哎哎，你不会真的走了吧，后面还有精彩的，嘿嘿~）**
 
@@ -38,7 +38,7 @@ tags:
 
 嗨，大家好，我来自二维码种族，是一位地下工作者，我的使命是传递信息，虽然我长得很美，但我很害羞。什么？你不相信？那我先收起我的矜持，给你发张我的自拍照，我大概长这样子：
 
-<div align=center><img width="150" height="150" src="/assert/img/qrcode/life/qrcodeBeautiful.png"/></div> 
+<div align=center><img width="150" height="150" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeBeautiful.png"/></div>
 
 --怎么样，我美吗？
 --美爆！！！
@@ -50,15 +50,15 @@ tags:
 古有云，天降大任于斯人也，必先苦其心志，劳其筋骨，饿其体肤......
 这次地下任务和我接头的是一位外科医生（好像叫“扫一扫”的家伙），他高超的手术技术能将藏在了我的身体的信息取出来。
 
-### 1. 读取图像，将原始图像变成黑白图像。
+### 1. 读取图像，将原始图像变成黑白图像
 
 为了让外科医生方便地取出我身体里的珍贵信息，我要舍弃我美丽的容颜，剥去华丽的外衣，换上病号服，做好手术前的准备。
 
 |                                               原本美丽的我（原始图像）                                                |                                                 花容失色的我（灰度图像）                                                  |                                               以身殉道的我（二值化图像或称黑白图像）                                               |
 |:---------------------------------------------------------------------------------------------------------:|:-------------------------------------------------------------------------------------------------------------:|:---------------------------------------------------------------------------------------------------------------:|
-| <div align=center><img width="150" height="150" src="/assert/img/qrcode/life/qrcodeBeautiful.png"/></div> | <div align=center><img width="150" height="150" src="/assert/img/qrcode/life/qrcodeBeautifulGray.png"/></div> | <div align=center><img width="150" height="150" src="/assert/img/qrcode/life/qrcodeBeautiful2value.jpg"/></div> |
+| <div align=center><img width="150" height="150" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeBeautiful.png"/></div> | <div align=center><img width="150" height="150" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeBeautifulGray.png"/></div> | <div align=center><img width="150" height="150" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeBeautiful2value.jpg"/></div> |
 
-### 2. 判断黑白图像中是否存在二维码。
+### 2. 判断黑白图像中是否存在二维码
 
 他和我接头的时候小心翼翼，会确认我的身份，观察我的头和双手、摸摸我的肩膀、骨架，以初步确认我到底是不是他的接头人。
 确认之后，他才开始和我聊起天来。从聊天中我发现这个外科医生对我们二维码种族的身体构造十分了解，简直比我自己还了解我的身体。他还向我介绍相关的知识。
@@ -67,25 +67,28 @@ tags:
 
 #### 基本构造图
 
-<div align=center><img width="300" height="300" src="/assert/img/qrcode/life/qrcodeBeautiful45.png"/></div> 
+<div align=center><img width="300" height="300" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeBeautiful45.png"/></div>
 
-<div align=center><img width="600" height="360" src="/assert/img/qrcode/life/qrcode-format.png"/></div> 
+<div align=center><img width="600" height="360" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcode-format.png"/></div>
 
 ##### 定位图案
+
 * 位置探测图形、位置探测图形分隔符: 用于对二维码的定位，对每个QR码来说，位置都是固定存在的，只是尺寸规格会有所差异。
 * 定位图形: 辅助定位，尺寸过大了后需要有根标准线，不然扫描的时候可能会扫歪了。
 * 校正图形: 尺寸规格确定，校正图形的数量和位置也就确定了。
 
 ##### 功能性数据
+
 * 格式信息: 表示改二维码的纠错级别，分为L、M、Q、H；
 * 版本信息: 即二维码的尺寸规格，QR码符号共有40种尺寸规格的矩阵（一般为黑白色），从21x21（版本1），到177x177（版本40），每一版本符号比前一版本 每边增加4个模块。
 
 ##### 数据码和纠错码
+
 * 数据和纠错码字: 实际保存的二维码信息，和纠错码字（用于修正二维码损坏带来的错误）。
 
 **只要了解二维码种族的基本构造，就可以通过鉴别头和双手（三个位置探测图形）、肩膀（定位图形）、骨架（校正图形）来初步判断来者是否是二维码了。**
 
-### 3. 通过解码，读取二维码承载信息，并做相应处理。
+### 3. 通过解码，读取二维码承载信息，并做相应处理
 
 之后这位外科医生给我打了全麻，我昏睡了过去，等我醒来，他已经拿到了藏在我体内的信息。
 后来他给我解释他用了一种名为“解码”的高超手术，还说如果我感兴趣，可以教我。（不，我不感兴趣！）
