:memo: docs: update post

--- a/source/_posts/浅谈二维码②与世浮沉.md
+++ b/source/_posts/浅谈二维码②与世浮沉.md
@@ -16,7 +16,7 @@ tags:
 
 <center>
 
-![扫一扫](https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/wxscan.jpg)
+![扫一扫](/assert/img/qrcode/life/wxscan.jpg)
 
 </center>
 
@@ -29,7 +29,7 @@ tags:
 我随意画了一张简陋的流程图，你们也随意看一下吧~
 （普通的迪斯科要普通地摇，随意的流程图要随意地看）
 
-<div align=center><img width="400" height="800" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeProcess.jpg"/></div>
+<div align=center><img width="400" height="800" src="/assert/img/qrcode/life/qrcodeProcess.jpg"/></div>
 
 **好了，你应该看懂了吧，那本文到此为止，散了吧！（哎哎哎，你不会真的走了吧，后面还有精彩的，嘿嘿~）**
 
@@ -38,7 +38,7 @@ tags:
 
 嗨，大家好，我来自二维码种族，是一位地下工作者，我的使命是传递信息，虽然我长得很美，但我很害羞。什么？你不相信？那我先收起我的矜持，给你发张我的自拍照，我大概长这样子：
 
-<div align=center><img width="150" height="150" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeBeautiful.png"/></div>
+<div align=center><img width="150" height="150" src="/assert/img/qrcode/life/qrcodeBeautiful.png"/></div>
 
 --怎么样，我美吗？
 --美爆！！！
@@ -56,7 +56,7 @@ tags:
 
 |                                               原本美丽的我（原始图像）                                                |                                                 花容失色的我（灰度图像）                                                  |                                               以身殉道的我（二值化图像或称黑白图像）                                               |
 |:---------------------------------------------------------------------------------------------------------:|:-------------------------------------------------------------------------------------------------------------:|:---------------------------------------------------------------------------------------------------------------:|
-| <div align=center><img width="150" height="150" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeBeautiful.png"/></div> | <div align=center><img width="150" height="150" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeBeautifulGray.png"/></div> | <div align=center><img width="150" height="150" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeBeautiful2value.jpg"/></div> |
+| <div align=center><img width="150" height="150" src="/assert/img/qrcode/life/qrcodeBeautiful.png"/></div> | <div align=center><img width="150" height="150" src="/assert/img/qrcode/life/qrcodeBeautifulGray.png"/></div> | <div align=center><img width="150" height="150" src="/assert/img/qrcode/life/qrcodeBeautiful2value.jpg"/></div> |
 
 ### 2. 判断黑白图像中是否存在二维码
 
@@ -67,9 +67,9 @@ tags:
 
 #### 基本构造图
 
-<div align=center><img width="300" height="300" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcodeBeautiful45.png"/></div>
+<div align=center><img width="300" height="300" src="/assert/img/qrcode/life/qrcodeBeautiful45.png"/></div>
 
-<div align=center><img width="600" height="360" src="https://github.com/CodePoem/CodePoem.github.io/raw/hexo/source/assert/img/qrcode/life/qrcode-format.png"/></div>
+<div align=center><img width="600" height="360" src="/assert/img/qrcode/life/qrcode-format.png"/></div>
 
 ##### 定位图案
 
