:art: style(common): format post
format style

--- a/source/_posts/浅谈二维码①身世谜题.md
+++ b/source/_posts/浅谈二维码①身世谜题.md
@@ -8,7 +8,7 @@ tags:
 - 二维码
 ---
 
-# 一、引言
+## 一、引言
 
 **二维码在如今的生活中随处可见，移动支付、社交App等都可以见到二维码的身影。今天我们就来了解一下二维码。**
 
@@ -18,11 +18,11 @@ tags:
 |   <div align=center><img width="150" height="150" src="/assert/img/qrcode/baseinfo/mywx.jpg"/></div>    |    <div align=center><img width="300" height="200" src="/assert/img/qrcode/baseinfo/qrcodeCat.png"/></div>    |
 |                                                        <div align=center><img width="300" height="200" src="/assert/img/qrcode/baseinfo/qrcodeGif.gif"/></div>                                                         ||
 
-# 二、什么是二维码
+## 二、什么是二维码
 
 **二维码的身世谜题：我们日常说的二维码究竟是何方神圣？**
 
-## 基础知识
+### 基础知识
 
 二维码 ，又称**二维条码**。说到二维条码，不得不先说一下**一维条码**。
 所谓的一维条码指的就是条形码（没错，就是你能在许多商品包装上，书本背后能看到的条形码）或称条码（barcode），而条形码是将**宽度不等**的多个黑条和空白，按照一定的编码规则排列，用以表达一组信息的图形标识符。如下图：
@@ -35,7 +35,7 @@ tags:
 
 二维码是在一维条码的基础上**扩展出另一维**而来的具有可读性的条码。
 
-## 进阶知识
+### 进阶知识
 
 二维条码的种类很多，常见的二维条码有：
 
@@ -60,11 +60,11 @@ tags:
 
 既然如此，我们着重介绍的就是QR码（后文所说的二维码除特殊说明外，都指的是QR码）。
 
-# 三、为什么使用二维码
+## 三、为什么使用二维码
 
 我就奇了怪了：你二维码为什么这么优秀？我就要用你？我为什么不用你的**爸爸——条形码**？
 
-## 存储信息容量较大
+### 存储信息容量较大
 
 传统的条形码只能处理30位左右的信息量，与此相比，QR码可处理条形码的几十倍到几百倍的信息量。
 
@@ -74,11 +74,11 @@ tags:
 
 </center>
 
-## 表示信息形式丰富
+### 表示信息形式丰富
 
 相比只能记录字母和数字的条形码，二维码还可以记载更复杂的数据，比如图片链接、网络链接等。
 
-## 空间利用率较高
+### 空间利用率较高
 
 QR码使用纵向和横向两个方向处理数据，如果是相同的信息量，QR码所占空间为条形码的十分之一左右。
 
@@ -92,7 +92,7 @@ QR码使用纵向和横向两个方向处理数据，如果是相同的信息量
 
 </center>
 
-## 360°无死角男神女神
+### 360°无死角男神女神
 
 二维码从360°任一方向均可快速读取。其奥秘就在于QR码中的3处定位图案，可以帮助QR码不受背景样式的影响，实现快速稳定的读取。
 
@@ -102,7 +102,7 @@ QR码使用纵向和横向两个方向处理数据，如果是相同的信息量
 
 </center>
 
-# 四、结语
+## 四、结语
 
 **以上是二维码的简单介绍，你也可以去[二维码官网](https://www.qrcode.com)了解更多。**
 
