--- a/source/_posts/读《大话设计模式》之备忘录模式.md
+++ b/source/_posts/读《大话设计模式》之备忘录模式.md
@@ -3,34 +3,37 @@ title: 读《大话设计模式》之备忘录模式
 date: 2016/10/12 20:46:25
 updated: 2016/10/12 20:46:25
 categories:
-- 设计模式
+  - 设计模式
 tags:
-- 设计模式
-- 《大话设计模式》
+  - 设计模式
+  - 《大话设计模式》
 ---
 
-# 一、模式概述：
+## 一、模式概述
 
-## 在不破坏封装性的前提下，捕获一个对象的内部状态，并在改对象之外保存这个状态。这样以后就可将该对象恢复到原先保存的状态。
+**在不破坏封装性的前提下，捕获一个对象的内部状态，并在改对象之外保存这个状态。这样以后就可将该对象恢复到原先保存的状态。**
 
-## UML图：
+### UML 图
 
 ![备忘录模式](/assert/img/designmodel/justtalk/memento/memento-1.png)
-Originator（发起人）：负责创建一个备忘录Memento，用以记录当前时刻它的内部状态，并可以使用备忘录恢复内部状态。Originator可根据需要决定Memento存储Originator的哪些内部状态。
-Memento（备忘录）：负责存储Originator对象的内部状态，并可防止Originator以外的其他对象访问备忘录。备忘录有两个接口，Caretaker只能看到备忘录的窄接口，它只能将备忘录传递给其他对象。Originator能够看到一个宽接口，允许它访问返回到先前状态所需的所有数据。
+Originator（发起人）：负责创建一个备忘录 Memento，用以记录当前时刻它的内部状态，并可以使用备忘录恢复内部状态。Originator 可根据需要决定 Memento 存储 Originator 的哪些内部状态。
+Memento（备忘录）：负责存储 Originator 对象的内部状态，并可防止 Originator 以外的其他对象访问备忘录。备忘录有两个接口，Caretaker 只能看到备忘录的窄接口，它只能将备忘录传递给其他对象。Originator 能够看到一个宽接口，允许它访问返回到先前状态所需的所有数据。
 Caretaker（管理者）：负责保存好备忘录，不能对备忘录的内容进行操作或检查。
 
-# 二、模式优缺点：
+## 二、模式优缺点
 
-## 优点：  
+### 优点
+
 可以把复杂的对象内部信息对其他的对象屏蔽起来。
 
-## 缺点：
+### 缺点
+
 如果状态数据很大很多，那么在资源消耗上，备忘录对象会非常耗内存。
 
-# 三、模式适用场景：
+## 三、模式适用场景
+
 功能比较复杂的，但需要维护或记录属性历史的类，或者需要保存的属性只是众多属性中的一小部分时。
 
-# 四、模式总结：
+## 四、模式总结
 
 备忘录模式可以做到较好的封装来实现“恢复现场”的效果，但有时候内存的消耗会比较大。
