--- a/source/_posts/读《大话设计模式》之简单工厂模式.md
+++ b/source/_posts/读《大话设计模式》之简单工厂模式.md
@@ -3,38 +3,44 @@ title: 读《大话设计模式》之简单工厂模式
 date: 2016/1/22 20:46:25
 updated: 2017/8/22 20:46:25
 categories:
-- 设计模式
+  - 设计模式
 tags:
-- 设计模式
-- 《大话设计模式》
+  - 设计模式
+  - 《大话设计模式》
 ---
 
-# 一、模式概述：
+## 一、模式概述
 
-__简单工厂模式是属于创建型模式，又叫做静态工厂方法（Static Factory Method）模式__
+**简单工厂模式是属于创建型模式，又叫做静态工厂方法（Static Factory Method）模式**
 
-__简单工厂模式是由一个工厂对象决定创建出哪一种产品类的实例。__
+**简单工厂模式是由一个工厂对象决定创建出哪一种产品类的实例。**
 
-## UML图：
+### UML 图
 
 ![简单工厂模式UML图](/assert/img/designmodel/justtalk/simplefactory/simplefactory-1.png)
 
-* 工厂（Creator）角色：简单工厂模式的核心，它负责实现创建所有实例的内部逻辑。工厂类的创建产品类的方法可以被外界直接调用，创建所需的产品对象。
-* 抽象产品（Product）角色：简单工厂模式所创建的所有对象的父类，它负责描述所有实例所共有的公共接口。
-* 具体产品（Concrete Product）角色：是简单工厂模式的创建目标，所有创建的对象都是充当这个角色的某个具体类的实例。
-# 二、模式优缺点：
+- 工厂（Creator）角色：简单工厂模式的核心，它负责实现创建所有实例的内部逻辑。工厂类的创建产品类的方法可以被外界直接调用，创建所需的产品对象。
+- 抽象产品（Product）角色：简单工厂模式所创建的所有对象的父类，它负责描述所有实例所共有的公共接口。
+- 具体产品（Concrete Product）角色：是简单工厂模式的创建目标，所有创建的对象都是充当这个角色的某个具体类的实例。
 
-## 优点：
+## 二、模式优缺点
+
+### 优点
+
 工厂类是整个模式的关键.包含了必要的逻辑判断,根据外界给定的信息,决定究竟应该创建哪个具体类的对象.通过使用工厂类,外界可以从直接创建具体产品对象的尴尬局面摆脱出来,仅仅需要负责“消费”对象就可以了，而不必管这些对象究竟如何创建及如何组织的．明确了各自的职责和权利。
-## 缺点：
+
+### 缺点
+
 1. 由于工厂类集中了所有实例的创建逻辑，违反了高内聚责任分配原则，将全部创建逻辑集中到了一个工厂类中；它所能创建的类只能是事先考虑到的，如果需要添加新的类，则就需要改变工厂类了。
 2. 当系统中的具体产品类不断增多时候，可能会出现要求工厂类根据不同条件创建不同实例的需求．这种对条件的判断和对具体产品类型的判断交错在一起，很难避免模块功能的蔓延，对系统的维护和扩展非常不利；
 
-# 三、模式适用场景：
-* 工厂类负责创建的对象比较少；
-* 客户端只知道传入工厂类的参数，对于如何创建对象（逻辑）不关心；
-* 由于简单工厂很容易违反高内聚责任分配原则，因此一般只在很简单的情况下应用。
+## 三、模式适用场景
 
-# 四、模式总结：
+- 工厂类负责创建的对象比较少；
+- 客户端只知道传入工厂类的参数，对于如何创建对象（逻辑）不关心；
+- 由于简单工厂很容易违反高内聚责任分配原则，因此一般只在很简单的情况下应用。
+
+## 四、模式总结
+
 简单工厂模式使客户端与具体的产品对象解耦。工厂类中包含了必要的逻辑判断，根据客户端的选择条件动态实例化相关的类。但是这就造成了工厂类违背了开闭原则，工厂类有修改的变化。
-__它的缺点在[工厂方法模式](/2017/02/11/读《大话设计模式》之工厂方法模式/index.html#一、模式概述：)得到一定的克服。__
+**它的缺点在[工厂方法模式](/2017/02/11/读《大话设计模式》之工厂方法模式/index.html#一、模式概述：)得到一定的克服。**
