--- a/source/_posts/读《大话设计模式》之观察者模式.md
+++ b/source/_posts/读《大话设计模式》之观察者模式.md
@@ -3,38 +3,39 @@ title: 读《大话设计模式》之观察者模式
 date: 2016/11/22 20:46:25
 updated: 2017/10/22 20:46:25
 categories:
-- 设计模式
+  - 设计模式
 tags:
-- 设计模式
-- 《大话设计模式》
+  - 设计模式
+  - 《大话设计模式》
 ---
 
-# 一、模式概述：
+## 一、模式概述
 
-__定义了一种一对多的依赖关系，让多个观察者对象同时监听某一个主题对象。这个主题对象在状态发生变化时，会通知所有的观察者对象爱，使他们能够自动更新自己。__
+**定义了一种一对多的依赖关系，让多个观察者对象同时监听某一个主题对象。这个主题对象在状态发生变化时，会通知所有的观察者对象爱，使他们能够自动更新自己。**
 
-## UML图：
+### UML 图
 
 ![观察者模式结构图](/assert/img/designmodel/justtalk/observer/observer-1.png)
 
 ![观察者模式](/assert/img/designmodel/justtalk/observer/observer-2.png)
 
-# 二、模式优缺点：
+## 二、模式优缺点
 
-## 优点：
-1. 观察者模式在被观察者和观察者之间建立一个抽象的耦合。被观察者角色所知道的只是一个具体观察者列表，每一个具体观察者都符合一个抽象观察者的接口。被观察者并不认识任何一个具体观察者，它只知道它们都有一个共同的接口。__(依赖倒转原则的体现)__
-2. 观察者模式支持__广播通讯__。被观察者会向所有的登记过的观察者发出通知，
+### 优点
 
-## 缺点：
+1. 观察者模式在被观察者和观察者之间建立一个抽象的耦合。被观察者角色所知道的只是一个具体观察者列表，每一个具体观察者都符合一个抽象观察者的接口。被观察者并不认识任何一个具体观察者，它只知道它们都有一个共同的接口。**(依赖倒转原则的体现)**
+2. 观察者模式支持**广播通讯**。被观察者会向所有的登记过的观察者发出通知，
 
- 1. 如果一个被观察者对象有很多的直接和间接的观察者的话，将所有的观察者都通知到会__花费很多时间__。
-2.  如果在观察者和观察目标之间有__循环依赖__的话，观察目标会触发它们之间进  行循环调用，可能导致系统崩溃。 
-3. 观察者模式没有相应的机制让观察者知道所观察的目标对象是怎么发生变化的，而仅仅只是知道观察目标发生了变化。
+### 缺点
 
-# 三、模式适用场景：
+1.  如果一个被观察者对象有很多的直接和间接的观察者的话，将所有的观察者都通知到会**花费很多时间**。
+2.  如果在观察者和观察目标之间有**循环依赖**的话，观察目标会触发它们之间进 行循环调用，可能导致系统崩溃。
+3.  观察者模式没有相应的机制让观察者知道所观察的目标对象是怎么发生变化的，而仅仅只是知道观察目标发生了变化。
+
+## 三、模式适用场景
 
 一个抽象模型有两个方面，其中一个方面依赖于另一个方面。将这些方面封装在独立的对象中使它们可以各自独立地改变和复用。
 
-# 四、模式总结：
+## 四、模式总结
 
 观察者模式定义了对象之间的一对多关系。多个观察者监听同一个被观察者，当该被观察者的状态发生改变时，会通知所有的观察者。
