:art: style(common): format post
06 Apr 2021 by GitHub

--- a/source/_posts/模板整理之上传仓库.md
+++ b/source/_posts/模板整理之上传仓库.md
@@ -3,17 +3,17 @@ title: 模板整理之上传仓库
 date: 2019-10-09 17:19:33
 updated: 2019-10-09 17:19:36
 categories:
-- 模板
+  - 模板
 tags:
-- Android
-- 模板
-- 上传仓库
+  - Android
+  - 模板
+  - 上传仓库
 ---
 
-我们在日常打aar包和jar包，并上传到远端中央仓库时，需要引入大段gradle代码，较为繁琐。
-我这里整理了常用的上传到中央仓库的gradle代码，提供了较为方便的使用方式。[上传代码模板GitHub]()
-目前只有上传到bintray也就是jcenter的整理，后期有需要其他远端中央仓库的会继续跟进。
+我们在日常打 aar 包和 jar 包，并上传到远端中央仓库时，需要引入大段 gradle 代码，较为繁琐。
+我这里整理了常用的上传到中央仓库的 gradle 代码，提供了较为方便的使用方式。[上传代码模板 GitHub]()
+目前只有上传到 bintray 也就是 jcenter 的整理，后期有需要其他远端中央仓库的会继续跟进。
 
 ---
 
-* 模板整理[GitHub](https://github.com/CodePoem/VTemplate)
+- 模板整理[GitHub](https://github.com/CodePoem/VTemplate)
