--- a/source/_posts/浅谈二维码①身世谜题.md
+++ b/source/_posts/浅谈二维码①身世谜题.md
@@ -3,20 +3,20 @@ title: 浅谈二维码①身世谜题
 date: 2019/02/22 09:51:29
 updated: 2019/02/22 09:51:29
 categories:
-- 二维码 
+  - 二维码
 tags:
-- 二维码
+  - 二维码
 ---
 
 ## 一、引言
 
-**二维码在如今的生活中随处可见，移动支付、社交App等都可以见到二维码的身影。今天我们就来了解一下二维码。**
+**二维码在如今的生活中随处可见，移动支付、社交 App 等都可以见到二维码的身影。今天我们就来了解一下二维码。**
 
-|                                                  二维码足迹                                                  |                                                     二维码足迹                                                     |
-|:-------------------------------------------------------------------------------------------------------:|:-------------------------------------------------------------------------------------------------------------:|
+|                                               二维码足迹                                                |                                                  二维码足迹                                                   |
+| :-----------------------------------------------------------------------------------------------------: | :-----------------------------------------------------------------------------------------------------------: |
 | <div align=center><img width="150" height="150" src="/assert/img/qrcode/baseinfo/qrcodeShy.png"/></div> | <div align=center><img width="150" height="150" src="/assert/img/qrcode/baseinfo/qrcodeBeautiful.png"/></div> |
 |   <div align=center><img width="150" height="150" src="/assert/img/qrcode/baseinfo/mywx.jpg"/></div>    |    <div align=center><img width="300" height="200" src="/assert/img/qrcode/baseinfo/qrcodeCat.png"/></div>    |
-|                                                        <div align=center><img width="300" height="200" src="/assert/img/qrcode/baseinfo/qrcodeGif.gif"/></div>                                                         ||
+| <div align=center><img width="300" height="200" src="/assert/img/qrcode/baseinfo/qrcodeGif.gif"/></div> |                                                                                                               |
 
 ## 二、什么是二维码
 
@@ -39,26 +39,26 @@ tags:
 
 二维条码的种类很多，常见的二维条码有：
 
-* QR码
-* PDF417码
-* 汉信码
-* EZ码
-* Aztec Code
-* QuickMark
-* Data Matrix
+- QR 码
+- PDF417 码
+- 汉信码
+- EZ 码
+- Aztec Code
+- QuickMark
+- Data Matrix
 
 （注意!大波二维码图片空袭警告!）
 
-|                                                  二维码种类                                                   |                                                    二维码种类                                                    |
-|:--------------------------------------------------------------------------------------------------------:|:-----------------------------------------------------------------------------------------------------------:|
+|                                                二维码种类                                                |                                                 二维码种类                                                  |
+| :------------------------------------------------------------------------------------------------------: | :---------------------------------------------------------------------------------------------------------: |
 |   <div align=center><img width="230" height="280" src="/assert/img/qrcode/baseinfo/qrcode.jpg"/></div>   |    <div align=center><img width="220" height="120" src="/assert/img/qrcode/baseinfo/pdf417.jpg"/></div>     |
-|    <div align=center><img width="180" height="200" src="/assert/img/qrcode/baseinfo/汉信码.jpg"/></div>     |    <div align=center><img width="220" height="240" src="/assert/img/qrcode/baseinfo/ezcode.jpg"/></div>     |
+|   <div align=center><img width="180" height="200" src="/assert/img/qrcode/baseinfo/汉信码.jpg"/></div>   |    <div align=center><img width="220" height="240" src="/assert/img/qrcode/baseinfo/ezcode.jpg"/></div>     |
 | <div align=center><img width="200" height="250" src="/assert/img/qrcode/baseinfo/azteccode.jpg"/></div>  | <div align=center><img width="280" height="210" src="/assert/img/qrcode/baseinfo/quickmarkcode.jpg"/></div> |
 | <div align=center><img width="230" height="290" src="/assert/img/qrcode/baseinfo/datamatrix.jpg"/></div> |                                                                                                             |
 
-其实我们平常所说的二维码**只是二维码的一种**，即QR码（快速响应码Quick Response Code）。也就是说我们**平常所说的二维码是狭义的二维码**，广义的二维码还包括了上述除了QR码的其他种类的二维码等。
+其实我们平常所说的二维码**只是二维码的一种**，即 QR 码（快速响应码 Quick Response Code）。也就是说我们**平常所说的二维码是狭义的二维码**，广义的二维码还包括了上述除了 QR 码的其他种类的二维码等。
 
-既然如此，我们着重介绍的就是QR码（后文所说的二维码除特殊说明外，都指的是QR码）。
+既然如此，我们着重介绍的就是 QR 码（后文所说的二维码除特殊说明外，都指的是 QR 码）。
 
 ## 三、为什么使用二维码
 
@@ -66,7 +66,7 @@ tags:
 
 ### 存储信息容量较大
 
-传统的条形码只能处理30位左右的信息量，与此相比，QR码可处理条形码的几十倍到几百倍的信息量。
+传统的条形码只能处理 30 位左右的信息量，与此相比，QR 码可处理条形码的几十倍到几百倍的信息量。
 
 <center>
 
@@ -80,11 +80,11 @@ tags:
 
 ### 空间利用率较高
 
-QR码使用纵向和横向两个方向处理数据，如果是相同的信息量，QR码所占空间为条形码的十分之一左右。
+QR 码使用纵向和横向两个方向处理数据，如果是相同的信息量，QR 码所占空间为条形码的十分之一左右。
 
 ## 容错能力较强
 
-二维码具备“纠错功能”，即使部分编码变脏或破损，也可以恢复数据（最高可以到30%面积破损仍可被读取）。
+二维码具备“纠错功能”，即使部分编码变脏或破损，也可以恢复数据（最高可以到 30%面积破损仍可被读取）。
 
 <center>
 
@@ -92,9 +92,9 @@ QR码使用纵向和横向两个方向处理数据，如果是相同的信息量
 
 </center>
 
-### 360°无死角男神女神
+### 360° 无死角男神女神
 
-二维码从360°任一方向均可快速读取。其奥秘就在于QR码中的3处定位图案，可以帮助QR码不受背景样式的影响，实现快速稳定的读取。
+二维码从 360° 任一方向均可快速读取。其奥秘就在于 QR 码中的 3 处定位图案，可以帮助 QR 码不受背景样式的影响，实现快速稳定的读取。
 
 <center>
 
@@ -115,8 +115,10 @@ QR码使用纵向和横向两个方向处理数据，如果是相同的信息量
 这个界面想必大家都很熟悉，那么你对扫二维码的这一过程感不感到好奇呢？那么**预知后事如何，请听下回分解**！（啪，拍案！）
 
 ---
+
 **浅谈二维码系列文章**
 
-* [浅谈二维码①身世谜题](/2019/02/22/浅谈二维码①身世谜题/index.html#一、引言)
-* [浅谈二维码②与世浮沉](/2019/02/22/浅谈二维码②与世浮沉/index.html#一、引言)
+- [浅谈二维码 ① 身世谜题](/2019/02/22/浅谈二维码①身世谜题/index.html#一、引言)
+- [浅谈二维码 ② 与世浮沉](/2019/02/22/浅谈二维码②与世浮沉/index.html#一、引言)
+
 ---
